--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -144,7 +144,7 @@
     <script src='{{STATIC_URL}}bootstrap/js/bootstrap.min.js'></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src='{{STATIC_URL}}js/jquery.cookie.js'></script>
-    <script src='{{STATIC_URL}}js/ko/knockout.min.js'></script>
+    <script src='//ajax.aspnetcdn.com/ajax/knockout/knockout-3.0.0.js'></script>
     <script src='{{STATIC_URL}}js/ko/knockout.mapping.min.js'></script>
     <script src='{{STATIC_URL}}js/common.js'></script>
     <script src="//cdn.ravenjs.com/1.1.2/jquery,native/raven.min.js"></script>
