--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -85,7 +85,7 @@
     There are no longer enough trees to harvest. Please wait until the next round begins.
 </div>
 {% endif %}
-{% endblock content %}
+{% endblock page %}
 {% block javascript %}
 {{ block.super }}
 <script type="text/javascript">
