--- a/vcweb/broker/templates/broker/participate.html
+++ b/vcweb/broker/templates/broker/participate.html
@@ -448,7 +448,7 @@
             model.activateWaitingRoomPage = function () {
                 console.debug("activating waiting room page");
                 model.templateName('WAITING_ROOM');
-            }
+            };
             model.submitWithinGroupChatMessage = function() {
                 console.debug("submitting within group chat message");
                 var formData = $('#within-group-chat-form').serialize();
@@ -457,10 +457,10 @@
                     getWebSocket().send(createMessageEvent(message));
                     $('#withinGroupChatMessage').val('').focus();
                 }
-            }
+            };
             model.submitBetweenGroupChatMessage = function() {
                 console.debug("submitting between group chat message");
-            }
+            };
 
             model.submitChatPreferences = function (data, evt) {
                 $('#chatPreferencesForm').find(':checkbox:not(:checked)').prop('checked', false);
@@ -473,24 +473,24 @@
                     $('#chatPreferencesForm').hide();
                 });
             };
-            model.isTimeOut = ko.observable(0)
-            model.hasSubmit = ko.observable(0)
+            model.isTimeOut = ko.observable(0);
+            model.hasSubmit = ko.observable(0);
             model.secondsLeft = ko.observable(0);
             model.currentInterval = ko.observable();
             model.setCurrentInterval = function (intervalId) {
                 model.clearCurrentInterval();
                 model.currentInterval(intervalId);
-            }
+            };
             model.clearCurrentInterval = function () {
                 console.debug("clearing current interval: " + model.currentInterval());
                 if (model.currentInterval()) {
                     clearInterval(model.currentInterval());
                     model.currentInterval(undefined);
                 }
-            }
+            };
             model.tick = function () {
                 model.secondsLeft(model.secondsLeft() - 1);
-            }
+            };
             model.isTimerRunning = ko.computed(function () {
                 return model.secondsLeft() > 0;
             });
