--- a/vcweb/subject_pool/templates/subject-pool/session_detail.html
+++ b/vcweb/subject_pool/templates/subject-pool/session_detail.html
@@ -164,9 +164,9 @@
 
             // SEARCH - Add the placeholder for Search and Turn it into in-line formcontrol
             var search_input = $('#participant-table').closest('.dataTables_wrapper').find('div[id$=_filter] input');
-            search_input.attr('placeholder', 'Search')
-            search_input.addClass('form-control input-sm')
-            search_input.css('width', '150px')
+            search_input.attr('placeholder', 'Search');
+            search_input.addClass('form-control input-sm');
+            search_input.css('width', '150px');
         });
     </script>
 {% endblock %}
