using django template comments to avoid confusing the ko parser

--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -53,7 +53,7 @@
 {% endblock page %}
 {% block javascript %}
 {{ block.super }}
-<!-- ko templates -->
+{# ko templates #}
 <script type='text/html' id='TREATMENT_RESULTS'>
     <h3>Session <span data-bind='text: sessionId'></span> Summary</h3>
     <table class='table table-compact'>
